--- a/Yukari/src/main/res/xml/pref_function.xml
+++ b/Yukari/src/main/res/xml/pref_function.xml
@@ -6,6 +6,29 @@
             android:title="先頭へぽっぴんジャンプ♪"
             android:summary="フッターバーの余白部分をタップした時にTLの一番上へ移動します"/>
     </PreferenceCategory>
+    <PreferenceCategory android:title="タイムライン">
+        <ListPreference
+            android:key="pref_timeline_click_action_left"
+            android:title="左側をタップした時の動作"
+            android:summary="TLの左側25%%をタップした時に呼び出す機能を選択します"
+            android:entries="@array/pref_timeline_click_action_entries"
+            android:entryValues="@array/pref_timeline_click_action_values"
+            android:defaultValue="open_detail"/>
+        <ListPreference
+            android:key="pref_timeline_click_action_center"
+            android:title="中央をタップした時の動作"
+            android:summary="TLの中央をタップした時に呼び出す機能を選択します"
+            android:entries="@array/pref_timeline_click_action_entries"
+            android:entryValues="@array/pref_timeline_click_action_values"
+            android:defaultValue="open_detail"/>
+        <ListPreference
+            android:key="pref_timeline_click_action_right"
+            android:title="右側をタップした時の動作"
+            android:summary="TLの右側25%%をタップした時に呼び出す機能を選択します"
+            android:entries="@array/pref_timeline_click_action_entries"
+            android:entryValues="@array/pref_timeline_click_action_values"
+            android:defaultValue="open_detail"/>
+    </PreferenceCategory>
     <PreferenceCategory android:title="ツイート詳細画面">
         <CheckBoxPreference
             android:key="pref_choose_reply_to"
