--- a/Yukari/src/main/res/values/arrays.xml
+++ b/Yukari/src/main/res/values/arrays.xml
@@ -270,8 +270,8 @@
         <item>reply</item>
         <item>reply_all</item>
         <item>favorite</item>
-        <item>retweet</item>
-        <item>fav_rt</item>
+        <item>repost</item>
+        <item>fav_and_repost</item>
         <item>quote</item>
         <item>open_profile</item>
         <item>open_thread</item>
