--- a/Yukari/src/main/res/xml/pref.xml
+++ b/Yukari/src/main/res/xml/pref.xml
@@ -123,6 +123,7 @@
                 android:action="android.intent.action.VIEW"
                 android:data="https://github.com/shibafu528/Yukari/wiki/%E5%AD%98%E5%9C%A8%E3%81%8C%E5%88%86%E3%81%8B%E3%82%8A%E3%81%AB%E3%81%8F%E3%81%84%E6%A9%9F%E8%83%BD"/>
         </Preference>
-        <Preference android:key="pref_about_feedback" android:title="作者に連絡"/>
+        <Preference android:key="pref_about_feedback" android:title="Twitterで作者に連絡"/>
+        <Preference android:key="pref_about_feedback_mastodon" android:title="Mastodonで作者に連絡"/>
     </PreferenceCategory>
 </PreferenceScreen>
