--- a/Yukari/src/main/res/xml/pref_post.xml
+++ b/Yukari/src/main/res/xml/pref_post.xml
@@ -28,6 +28,13 @@
             android:defaultValue=" ＞RT"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="Mastodon">
+        <ListPreference
+            android:key="pref_toot_visibility_default"
+            android:title="公開範囲の既定値"
+            android:summary="投稿画面を開いた時の公開範囲のデフォルトを設定します"
+            android:entries="@array/pref_toot_visibility_default_entries"
+            android:entryValues="@array/pref_toot_visibility_default_values"
+            android:defaultValue="0"/>
         <EditTextPreference
             android:key="pref_toot_cw_default_text"
             android:title="CWの既定値"
