--- a/Yukari/src/main/res/layout/fragment_swipelist.xml
+++ b/Yukari/src/main/res/layout/fragment_swipelist.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <ListView
-            android:id="@+id/android:list"
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
