--- a/Yukari/src/main/res/layout/activity_imagepreview.xml
+++ b/Yukari/src/main/res/layout/activity_imagepreview.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ivPreviewImage"
