画像キャッシュ容量の初期値を一律32MBに引き上げ、最大1GBまで選択可能に拡張
元の初期値の合計は28MBで、2013〜2014年頃のちょっと強気なサイズという感じだった。当時のスマホの使用可能容量はだいたい10GBくらい。2022年現在は大抵6倍くらいは期待できるので、合計96MBでも文句ないでしょう。たぶん。

--- a/Yukari/src/main/res/values/arrays.xml
+++ b/Yukari/src/main/res/values/arrays.xml
@@ -112,6 +112,8 @@
         <item>64MB</item>
         <item>128MB</item>
         <item>256MB</item>
+        <item>512MB</item>
+        <item>1024MB</item>
     </string-array>
 
     <string-array name="pref_cache_size_values">
@@ -123,6 +125,8 @@
         <item>64</item>
         <item>128</item>
         <item>256</item>
+        <item>512</item>
+        <item>1024</item>
     </string-array>
 
     <string-array name="mute_expr">
