--- a/Yukari/src/main/res/xml/pref_expert.xml
+++ b/Yukari/src/main/res/xml/pref_expert.xml
@@ -15,21 +15,21 @@
             android:summary="プロフィール画像のキャッシュ"
             android:entries="@array/pref_cache_size_entries"
             android:entryValues="@array/pref_cache_size_values"
-            android:defaultValue="4"/>
+            android:defaultValue="32"/>
         <ListPreference
             android:key="pref_picture_cache_size"
             android:title="ピクチャキャッシュ容量"
-            android:summary="サムネイル・プロフィールヘッダー画像のキャッシュ"
+            android:summary="サムネイル、プロフィールヘッダー画像、Mastodonのカスタム絵文字のキャッシュ"
             android:entries="@array/pref_cache_size_entries"
             android:entryValues="@array/pref_cache_size_values"
-            android:defaultValue="8"/>
+            android:defaultValue="32"/>
         <ListPreference
             android:key="pref_preview_cache_size"
             android:title="プレビューキャッシュ容量"
             android:summary="プレビュー時のフルサイズ画像のキャッシュ"
             android:entries="@array/pref_cache_size_entries"
             android:entryValues="@array/pref_cache_size_values"
-            android:defaultValue="16"/>
+            android:defaultValue="32"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="トラブルシューティング">
         <Preference
