設定画面にストリーミング接続管理へのリンクを追加
"Active Accounts" をタップとか分かるかという声が度々寄せられていたため。

--- a/Yukari/src/main/res/xml/pref.xml
+++ b/Yukari/src/main/res/xml/pref.xml
@@ -7,6 +7,12 @@
             android:targetClass="shibafu.yukari.activity.AccountManageActivity"/>
     </Preference>
 
+    <Preference android:title="ストリーミング接続管理">
+        <intent
+            android:targetPackage="@string/applicationId"
+            android:targetClass="shibafu.yukari.activity.ChannelManageActivity"/>
+    </Preference>
+
     <Preference android:title="表示設定">
         <intent
             android:targetPackage="@string/applicationId"
