extract string resources

--- a/Yukari/src/main/res/layout/fragment_report_comment.xml
+++ b/Yukari/src/main/res/layout/fragment_report_comment.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="他に伝えたい情報はありますか？"
+        android:text="@string/mastodon_report_comment_fragment_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -26,7 +26,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="送信"
+        android:text="@string/button_send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -46,8 +46,8 @@
             android:id="@+id/etComment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="top|left"
-            android:hint="追加コメント"
+            android:gravity="top|start"
+            android:hint="@string/mastodon_report_comment_fragment_comment_hint"
             android:inputType="textMultiLine"
             android:maxLines="6"
             android:minLines="6" />
@@ -60,7 +60,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="このユーザーは別のサーバーに所属しています。通報内容を匿名で転送しますか？"
+        android:text="@string/mastodon_report_comment_fragment_forward"
         android:textAppearance="?android:attr/textAppearanceSmall"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="転送する"
+        android:text="@string/mastodon_report_comment_fragment_forward_checkbox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
