--- a/Yukari/src/main/res/layout/fragment_report_category.xml
+++ b/Yukari/src/main/res/layout/fragment_report_category.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="通報の理由を教えてください"
+        android:text="@string/mastodon_report_category_fragment_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
-        android:text="以下のアカウントから通報します"
+        android:text="@string/mastodon_report_category_fragment_report_from"
         app:layout_constraintBottom_toTopOf="@+id/userView"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="サーバーのルールを確認しています…"
+        android:text="@string/mastodon_report_category_fragment_loading_message"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="@+id/listView"
         app:layout_constraintStart_toStartOf="@+id/listView"
