検索ダイアログを表示した時、検索ボックスに初期フォーカスを設定する
refs #295

--- a/Yukari/src/main/res/layout/dialog_search.xml
+++ b/Yukari/src/main/res/layout/dialog_search.xml
@@ -23,7 +23,9 @@
             android:layout_weight="1"
             android:hint="検索"
             android:singleLine="true"
-            android:imeOptions="actionSearch"/>
+            android:imeOptions="actionSearch">
+            <requestFocus />
+        </EditText>
 
         <ImageButton
             android:layout_width="42dp"
