間違えて固定dpでレイアウトしてた

--- a/Yukari/src/main/res/layout/fragment_oauth_success.xml
+++ b/Yukari/src/main/res/layout/fragment_oauth_success.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintGuide_end="460dp"
+        app:layout_constraintGuide_percent="0.5"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
