ブックマーク修復結果をToastではなく、完了画面として表示するようにした
refs #286

--- a/Yukari/src/main/res/layout/activity_asset.xml
+++ b/Yukari/src/main/res/layout/activity_asset.xml
@@ -30,10 +30,23 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="0 %"
-        android:textColor="@color/key_color"
+        android:textColor="?attr/colorAccent"
         android:id="@+id/tvProgress"
         android:layout_below="@+id/progressBar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp" />
+
+    <Button
+        android:id="@+id/btnDone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvProgress"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:visibility="gone"
+        android:text="OK" />
 
 </RelativeLayout>
