--- a/Yukari/src/main/res/layout/fragment_swipelist.xml
+++ b/Yukari/src/main/res/layout/fragment_swipelist.xml
@@ -26,4 +26,11 @@
         android:layout_gravity="right|top"
         android:layout_marginRight="6dp"
         android:layout_marginTop="-12dp" />
+
+    <shibafu.yukari.view.TimelineErrorView
+        android:id="@+id/llErrorView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:visibility="invisible" />
 </FrameLayout>
